8164921: Memory leaked when instrumentation.retransformClasses() is called repeatedly

Return Metablocks smaller than dictionary's dark matter.

Co-authored-by: Jon Masamitsu <jon.masamitsu@oracle.com>
Reviewed-by: mgerdin, sspitsyn, dsamersoff